# CmakeTest

./: CMakeLists.txt  README.md
HelloWorld/: CMakeLists.txt  HelloWorldMain.c  chdirtest.c
LibProject/inc/: store.h
LibProject/src/: CMakeLists.txt  store.c
MainProject/: CMakeLists.txt
MainProject/inc/: curlmain.h
MainProject/src/: CMakeLists.txt  main.c
curl/: CMakeLists.txt
curl/src/: CMakeLists.txt  curlmain.c
hello-module/: CMakeLists.txt
hello-module/cmake/: Findhello.cmake
hello-module/src/: CMakeLists.txt  HelloModuleMain.c
hello-world-clear/: CMakeLists.txt  README.md  runhello.sh
hello-world-clear/doc/: hello.txt
hello-world-clear/src/: CMakeLists.txt
hello-world-lib/: CMakeLists.txt  README.md
hello-world-lib/src/: CMakeLists.txt  hello.c  hello.h
hello-world-shared/: CMakeLists.txt
hello-world-shared/include/hello/: hello.h
hello-world-shared/src/: CMakeLists.txt  main.c
